' Generated by UML Generator
' Encoded: TLFBJiCm4BpdArOvEIgjE5TGjPGB4aX8hSG1SN1jgrcHn9MzeQ9L_nq_cX8JUecSyNXsPjUUM-A6shhAx2SsEsvu3QBYrYw836vQKaz2DoiyABZDIfGA11fHgImBB7Z5mu73CGCOIzrkoocitBbcwm7BMw7wW2YLiWb2UhTpIpk5PxHq5pTcWMjQIucQyz3_7_jFACysBLPIcIayn4NXjaQa8vSLbrEdplMP5tt_5HvKJeB1FUHlfUAK3oBwhQNNHm5hNNFI-J2r9xrevzgegkBvzIOuOgFsi326VmTyneekz-WSWFMztq3YF3HXZrG-Ulii2L5SMjMHLZu8I-8CISkGXAM1KXgNSXtZi7Ei_tbXP7uqOOA_arcw1BeEO7z8ewExfuJY13N7Xd7ZknLrtp-SofT6wKNYTPnCPfTQdSerBDQVgqQwH_03
' URL: http://www.plantuml.com/plantuml/uml/TLFBJiCm4BpdArOvEIgjE5TGjPGB4aX8hSG1SN1jgrcHn9MzeQ9L_nq_cX8JUecSyNXsPjUUM-A6shhAx2SsEsvu3QBYrYw836vQKaz2DoiyABZDIfGA11fHgImBB7Z5mu73CGCOIzrkoocitBbcwm7BMw7wW2YLiWb2UhTpIpk5PxHq5pTcWMjQIucQyz3_7_jFACysBLPIcIayn4NXjaQa8vSLbrEdplMP5tt_5HvKJeB1FUHlfUAK3oBwhQNNHm5hNNFI-J2r9xrevzgegkBvzIOuOgFsi326VmTyneekz-WSWFMztq3YF3HXZrG-Ulii2L5SMjMHLZu8I-8CISkGXAM1KXgNSXtZi7Ei_tbXP7uqOOA_arcw1BeEO7z8ewExfuJY13N7Xd7ZknLrtp-SofT6wKNYTPnCPfTQdSerBDQVgqQwH_03
' Generated on: 2025-11-19T16:18:41.244328768

@startuml
skinparam classAttributeIconSize 0
hide circle

class Pizza {
  -dough: String
  -sauce: String
  -cheese: String
  -toppings: List<String>
  -crust: String
  -size: String
  --
  -Pizza(builder: Builder)
  +toString(): String
}

class Builder {
  -size: String
  -crust: String
  -dough: String = "Wheat"
  -sauce: String = "Classic Tomato"
  -cheese: String = "Mozzarella"
  -toppings: List<String> = new ArrayList<>()
  --
  +Builder(size: String, crust: String)
  +withDough(dough: String): Builder
  +withSauce(sauce: String): Builder
  +withCheese(cheese: String): Builder
  +addTopping(topping: String): Builder
  +build(): Pizza
}

class CustomPizzaBuilder {
  +{static} main(args: String[]): void
}

Pizza ..> Builder
Builder ..> Builder
Builder ..> Pizza
@enduml